# boat-simulator

./: README.md  package.xml  setup.py
.github/workflows/: tests.yml
boat_simulator/common/: constants.py  dataline.py  generators.py  sensors.py  types.py  unit_conversions.py  utils.py
boat_simulator/nodes/data_collection/: data_collection_node.py
boat_simulator/nodes/low_level_control/: control.py  controller.py  decorators.py  low_level_control_node.py  test.ipynb
boat_simulator/nodes/output_interface/: output_interface_node.py
boat_simulator/nodes/physics_engine/: computation.py  decorators.py  fluid_forces.py  fluid_generation.py  fluids.py  force_computation.py  kinematics_computation.py  kinematics_data.py  kinematics_formulas.py  model.py  physics_engine_node.py  state.py
boat_simulator/output_interface/: output_interface_node.py
boat_simulator/physics_engine/: physics_engine_node.py
launch/: all_launch.yaml  main_launch.py  output_interface_launch.yaml  physics_engine_launch.py  physics_engine_launch.yaml
nodes/output_interface/: output_interface_node.py
tests/integration/: test_example.py
tests/unit/common/: test_generators.py  test_gps_sensor.py  test_sensors.py  test_unit_conversions.py  test_utils.py  test_wind_sensor.py
tests/unit/nodes/low_level_control/: test_control.py  test_controller.py
tests/unit/nodes/output_interface/: test_example.py
tests/unit/nodes/physics_engine/: test_fluid_forces.py  test_kinematics_computation.py
